--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="restaurant-card">
                         <img src="https://b.zmtcdn.com/data/pictures/chains/2/18797702/f098197793d4534f40f04c6f3b0632a6_o2_featured_v2.jpg" alt="KFC">
                         <h3>KFC</h3>
-                        <p>American, Chicken, Fast Food</p>
+                        <p>American, Chicken65, Fast Food</p>
                         <span class="rating">4.3 ★</span>
                         <span class="delivery-time">35 mins</span>
                     </div>
@@ -86,4 +86,5 @@
     </footer>
 
 </body>
+
 </html>
