--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#">Swiggy One</a></li>
                     <li><a href="#">Instamart</a></li>
                     <li><a href="#">Dineout</a></li>
-                    <li><a href="#">Swiggy Money</a></li>
+                    <li><a href="#">Swiggy Zomato</a></li>
                     <li><a href="#">Login</a></li>
                     <li class="signup"><a href="#">Sign Up</a></li>
                 </ul>
@@ -88,3 +88,4 @@
 </body>
 
 </html>
+
