--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h1>Craving something? Get it delivered in minutes.</h1>
-                    <p>Order food from your favorite restaurants. Pizza, Biryani, Burgers, and more!</p>
+                    <p>Order food from your favorite restaurants. Pizza, Biryani, Burgers, French Fries and more!</p>
                     <form class="search-bar">
                         <input type="text" placeholder="Enter your delivery location...">
                         <button type="submit">FIND FOOD</button>
@@ -88,4 +88,5 @@
 </body>
 
 </html>
+
 
